# misys-3d-racing-stack

./: .gitmodules  forza_rviz.rviz
.install_utils/: post_create_command.sh
3D_Detection/: README.md
3D_Detection/src/cluster_to_obstacle_cpp/: CMakeLists.txt  package.xml
3D_Detection/src/cluster_to_obstacle_cpp/config/: cluster_to_obstacle_node.param.yaml
3D_Detection/src/cluster_to_obstacle_cpp/launch/: cluster_to_obstacle_cpp.launch.xml
3D_Detection/src/cluster_to_obstacle_cpp/src/: cluster_to_obstacle_node.cpp  cluster_to_obstacle_noderere.cpp
3D_Detection/src/pc2_to_scan_cpp/: CMakeLists.txt  package.xml
3D_Detection/src/pc2_to_scan_cpp/launch/: pc2_to_laserscan.launch.xml
3D_Detection/src/pc2_to_scan_cpp/src/: pc2_to_laserscan.cpp
3D_Detection/src/perception_3D/autoware_ground_segmentation/: CMakeLists.txt
3D_Detection/src/sensing/autoware_pointcloud_preprocessor/: CMakeLists.txt
3D_Detection/src/sensing/autoware_pointcloud_preprocessor/config/: passthrough_filter_node.param.yaml
3D_Detection/src/sensing/autoware_pointcloud_preprocessor/include/autoware/pointcloud_preprocessor/passthrough_filter/: passthrough_filter_node.hpp
3D_Detection/src/sensing/autoware_pointcloud_preprocessor/launch/: ring_passthrough_filter.launch.xml
3D_Detection/src/sensing/autoware_pointcloud_preprocessor/src/passthrough_filter/: passthrough_filter_node.cpp  passthrough_filter_uint16_node.cpp  passthrough_uint16.cpp  test.cpp
MPCC/C++/: .gitignore
MPCC/C++/Params/: bounds.json  bounds_1f.json  bounds_3f.json  bounds_hall.json  bounds_teras.json  config.json  config_1f.json  config_3f.json  config_hall.json  config_sim.json  config_teras.json  cost.json  cost_1f.json  cost_3f.json  cost_hall.json  cost_teras.json  model.json  model_1f.json  model_3f.json  model_hall.json  model_teras.json  normalization.json  normalization_1f.json  normalization_3f.json  normalization_hall.json  normalization_teras.json  track_1f.json  track_3f.json  track_hall.json  track_teras.json
controller_cpp/: CMakeLists.txt  package.xml
controller_cpp/launch/: controller_launch.xml
controller_cpp/src/: controller_manager_cpp.cpp  pp.cpp  top_controller.cpp
mpcc_ros/: CMakeLists.txt
mpcc_ros/include/: shared_state.hpp
mpcc_ros/launch/: mpcc_components.launch.py
mpcc_ros/msg/: TrackPoints.msg
mpcc_ros/src/: corridor_generator.cpp  mpcc_components.cpp  mpcc_main.cpp  mpcc_node copy.cpp  mpcc_node.cpp  mpcc_node_sim.cpp  mpcc_node_sim_delay_test.cpp  mpcc_node_sim_test.cpp  mpcc_node_sim_test_planner.cpp  shared_state.cpp  track_points_publisher.cpp
perception/perception/: tracking.py
perception_cpp/: CMakeLists.txt  package.xml
perception_cpp/launch/: perception_cpp_launch.xml
planner/global_planner/: setup.py
planner/global_planner/global_planner/: center_to_trackjson.py  global_planner_logic.py  global_planner_node.py  global_planner_utils.py  global_trajectory_publisher.py  readwrite_global_waypoints.py
planner/graph_planner/: CMakeLists.txt  package.xml
planner/graph_planner/include/: NodeGraph.hpp  graph_planner.hpp  offline_params.hpp  velocity_profile.hpp
planner/graph_planner/launch/: graph_planner_launch.xml
planner/graph_planner/src/: graph_planner.cpp  graph_planner_utils.cpp  offline_params.cpp  visualization.cpp
planner/local_planners/spline_planner/spline_planner/: spline_planner.py
sensors/vesc/vesc_ackermann/launch/: vesc_to_odom_node.launch.xml
sensors/vesc/vesc_ackermann/src/: vesc_to_odom.cpp
stack_master/: test.rviz
stack_master/config/: state_machine_params.yaml
stack_master/config/NUC2/: l1_params.yaml
stack_master/config/global_planner/: global_planner_params.yaml
stack_master/launch/: base_system_3D_launch.xml  base_system_launch.xml  head_to_head_3D_launch.xml  time_trials_launch.xml
stack_master/maps/real_hall/: ltpl_waypoints.json  ot_sectors.yaml  speed_scaling.yaml
stack_master/maps/teras/: global_waypoints.json  ltpl_waypoints.json  ot_sectors.yaml  speed_scaling.yaml  teras.yaml
stack_master/maps/teras_2/: global_waypoints.json  ltpl_waypoints.json  ot_sectors.yaml  speed_scaling.yaml  teras_2.yaml
stack_master/maps/teras_3/: global_waypoints.json  ltpl_waypoints.json  ot_sectors.yaml  speed_scaling.yaml  teras_3.yaml
state_estimation/src/carstate_3d/: package.xml  setup.cfg  setup.py
state_estimation/src/carstate_3d/carstate_3d/: carstate_3d_node.py
state_estimation/src/carstate_3d/launch/: carstate_3d_launch.py
state_estimation/src/ekf_localizer/: CMakeLists.txt  package.xml
state_estimation/src/ekf_localizer/config/: ekf_localizer.param.yaml
state_estimation/src/ekf_localizer/launch/: ekf_localizer.launch.xml  ekf_localizer_debug.launch.py  full_localization.launch.xml
state_estimation/src/ekf_localizer/src/: ekf_localizer.cpp
state_estimation/src/gyro_odometer/: package.xml
state_estimation/src/gyro_odometer/launch/: gyro_odometer.launch.xml
state_estimation/src/gyro_odometer/src/: gyro_odometer_core.cpp
state_estimation/src/initial_pose_publisher/: CMakeLists.txt  package.xml
state_estimation/src/initial_pose_publisher/src/: lidar2initialpose.cpp
state_estimation/src/lidarslam_ros2/scanmatcher/: CMakeLists.txt
state_estimation/src/livox_ros_driver2/: build.sh
state_estimation/src/livox_ros_driver2/config/: MID360_config.json
state_estimation/src/maps/real_hall/: pose_graph.g2o
state_estimation/src/maps/teras/: pose_graph.g2o
state_estimation/src/odom_to_twist_converter/: CMakeLists.txt  package.xml
state_estimation/src/odom_to_twist_converter/launch/: odom_to_twist_converter.launch.xml
state_estimation/src/odom_to_twist_converter/src/: odom_to_twist_converter.cpp
state_estimation/src/pose_to_pose_with_cov/: CMakeLists.txt  package.xml
state_estimation/src/pose_to_pose_with_cov/src/: pose_to_pose_with_cov.cpp
state_machine/state_machine/: state_machine.py  state_machine_params.py  states.py  transitions.py  transitions_orig.py
teras_data/: metadata.yaml
utilities/libraries/f110_msgs/: CMakeLists.txt
(+31 files in other folders)
