<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>carstate_3d</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="j20nsuknam@gmail.com">misys</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>f110_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>frenet_conversion</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
